# suada-mcp

./: README.md
python/: README.md  pyproject.toml  requirements.txt  suada_mcp.py  suada_server.py
typescript/: README.md  package-lock.json  package.json  suada-mcp.ts  suada-server.ts  tsconfig.json
